[gd_scene load_steps=4 format=3 uid="uid://clr2j3kv8wxxm"]

[ext_resource type="Script" uid="uid://cf6nq7s37vg2j" path="res://scenes/ranks_list/rank_item.gd" id="1_rank_item"]
[ext_resource type="FontFile" uid="uid://gl5yj4pah2oh" path="res://assets/FlappyBirdRegular-9Pq0.ttf" id="2_rank_item"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rank_item"]
bg_color = Color(0.2, 0.2, 0.25, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="RankItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 80)
offset_right = 304.0
offset_bottom = 485.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rank_item")
script = ExtResource("1_rank_item")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CurrentIndicator" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rank_item")
theme_override_font_sizes/font_size = 40
text = "â˜…"
vertical_alignment = 1

[node name="LeftSection" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="RankName" type="Label" parent="MarginContainer/HBoxContainer/LeftSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rank_item")
theme_override_font_sizes/font_size = 35
text = "Polluelo"

[node name="RankPoints" type="Label" parent="MarginContainer/HBoxContainer/LeftSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rank_item")
theme_override_font_sizes/font_size = 20
text = "0 puntos"

[node name="RightSection" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Description" type="Label" parent="MarginContainer/HBoxContainer/RightSection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rank_item")
theme_override_font_sizes/font_size = 30
text = "Apenas aprendiendo a volar"
autowrap_mode = 3
